# mlflow-adsp

./: .coveragerc  .dockerignore  .gitignore  .projectignore  README.md  anaconda-project.yml  pyproject.toml  setup.py
.github/workflows/: pull-request.yml  python-publish.yml
conda-recipe/: meta.yaml
container/: Dockerfile  conda.yml
docs/source/: cli.rst  conf.py  index.rst  workflow_setup_guide.md
docs/source/mlflow_adsp/: mlflow_adsp.common.rst  mlflow_adsp.contracts.dto.rst  mlflow_adsp.contracts.rst  mlflow_adsp.contracts.types.rst  mlflow_adsp.services.rst
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: config-map.yaml  deployment.yaml  secret.yaml  service.yaml
mlflow_adsp/: __init__.py  backend.py  serve.py  submitted_run.py
mlflow_adsp/common/: adsp.py  log.py  process.py  scheduler.py  tracking.py
mlflow_adsp/contracts/dto/: base_model.py  endpoint_manager_parameters.py  job.py  step.py  target_metadata.py
mlflow_adsp/contracts/errors/: plugin.py  subprocess_failure_error.py
mlflow_adsp/contracts/types/: job_run_state.py  log_level.py  reloadable_model_uri_type.py
mlflow_adsp/services/: endpoint_manager.py  worker.py
test/fixtures/git_remote/: config  index
test/fixtures/models/model/: MLmodel  conda.yaml  model.xgb  requirements.txt
test/fixtures/worker/: fail.py  success.py
test/unit/: env.offline  setup.py  test_backend.py  test_submitted_run.py
test/unit/common/: test_adsp.py  test_procss.py  test_scheduler.py  test_tracking.py
test/unit/services/: test_endpoint_manager.py
(+2 files in other folders)
